Document last functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,5 +3,10 @@
 export(compute_horizon)
 export(compute_skyviewfactor)
 export(compute_sun_position)
+export(download_dem_kartverket)
 export(get_latlon_frost)
+export(get_wms_tile)
+export(load_data_ar5)
+export(plot_dem_rayshader)
 export(plot_station_horizon_sun)
+export(plot_station_tile)
