--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,4 +9,5 @@ export(get_wms_tile)
 export(load_data_ar5)
 export(plot_dem_rayshader)
 export(plot_station_horizon_sun)
+export(plot_station_siting_context)
 export(plot_station_tile)
