fix doc and add vignette

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(compute_horizon)
 export(compute_skyviewfactor)
 export(compute_sun_position)
 export(download_dem_kartverket)
+export(download_dem_kartverket_ogc)
 export(get_latlon_frost)
 export(get_wms_tile)
 export(load_data_ar5)
