fix plot siting function and rename tile functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,9 +6,9 @@ export(compute_sun_position)
 export(download_dem_kartverket)
 export(download_dem_kartverket_ogc)
 export(get_latlon_frost)
-export(get_wms_tile)
+export(get_tile_wms)
 export(load_data_ar5)
 export(plot_dem_rayshader)
 export(plot_station_horizon_sun)
 export(plot_station_siting_context)
-export(plot_station_tile)
+export(plot_tile_station)
