Add package import and some examples

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,3 +12,15 @@ export(plot_dem_rayshader)
 export(plot_station_horizon_sun)
 export(plot_station_siting_context)
 export(plot_tile_station)
+import(ggfun)
+import(ggplot2)
+import(httr)
+import(maptiles)
+import(osw4R)
+import(rayshader)
+import(rgrass)
+import(sf)
+import(stringr)
+import(suntools)
+import(terra)
+import(tidyterra)
