fix typo ows4R library

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,7 +16,7 @@ import(ggfun)
 import(ggplot2)
 import(httr)
 import(maptiles)
-import(osw4R)
+import(ows4R)
 import(rayshader)
 import(rgrass)
 import(sf)
