--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,11 +15,23 @@ export(plot_tile_station)
 import(ggfun)
 import(ggplot2)
 import(httr)
-import(maptiles)
 import(ows4R)
 import(rayshader)
 import(sf)
 import(stringr)
-import(suntools)
 import(terra)
-import(tidyterra)
+importFrom(maptiles,get_tiles)
+importFrom(rgrass,execGRASS)
+importFrom(rgrass,initGRASS)
+importFrom(rgrass,remove_GISRC)
+importFrom(rgrass,unlink_.gislock)
+importFrom(rgrass,write_RAST)
+importFrom(sf,st_coordinates)
+importFrom(sf,st_transform)
+importFrom(stringr,str_to_title)
+importFrom(suntools,solarpos)
+importFrom(terra,cellFromXY)
+importFrom(terra,rast)
+importFrom(terra,setMinMax)
+importFrom(tidyterra,geom_spatraster_contour)
+importFrom(tidyterra,geom_spatraster_rgb)
