Update import for frost and siting

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,13 +20,20 @@ import(rayshader)
 import(sf)
 import(stringr)
 import(terra)
+importFrom(httr,GET)
+importFrom(httr,authenticate)
+importFrom(httr,content)
+importFrom(magrittr,"%>%")
 importFrom(maptiles,get_tiles)
 importFrom(rgrass,execGRASS)
 importFrom(rgrass,initGRASS)
 importFrom(rgrass,remove_GISRC)
 importFrom(rgrass,unlink_.gislock)
 importFrom(rgrass,write_RAST)
+importFrom(sf,st_as_sf)
+importFrom(sf,st_as_sfc)
 importFrom(sf,st_coordinates)
+importFrom(sf,st_crs)
 importFrom(sf,st_transform)
 importFrom(stringr,str_to_title)
 importFrom(suntools,solarpos)
