--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,19 +12,23 @@ export(plot_dem_rayshader)
 export(plot_station_horizon_sun)
 export(plot_station_siting_context)
 export(plot_tile_station)
-import(ggfun)
 import(ggplot2)
-import(httr)
 import(ows4R)
-import(rayshader)
-import(sf)
-import(stringr)
-import(terra)
+importFrom(ggfun,element_roundrect)
 importFrom(httr,GET)
 importFrom(httr,authenticate)
 importFrom(httr,content)
 importFrom(magrittr,"%>%")
 importFrom(maptiles,get_tiles)
+importFrom(rayshader,add_shadow)
+importFrom(rayshader,plot_3d)
+importFrom(rayshader,raster_to_matrix)
+importFrom(rayshader,render_camera)
+importFrom(rayshader,render_depth)
+importFrom(rayshader,render_highquality)
+importFrom(rayshader,render_label)
+importFrom(rayshader,render_snapshot)
+importFrom(rayshader,sphere_shade)
 importFrom(rgrass,execGRASS)
 importFrom(rgrass,initGRASS)
 importFrom(rgrass,remove_GISRC)
@@ -34,11 +38,16 @@ importFrom(sf,st_as_sf)
 importFrom(sf,st_as_sfc)
 importFrom(sf,st_coordinates)
 importFrom(sf,st_crs)
+importFrom(sf,st_intersection)
+importFrom(sf,st_read)
 importFrom(sf,st_transform)
 importFrom(stringr,str_to_title)
 importFrom(suntools,solarpos)
 importFrom(terra,cellFromXY)
+importFrom(terra,crs)
+importFrom(terra,ext)
 importFrom(terra,rast)
 importFrom(terra,setMinMax)
+importFrom(terra,vect)
 importFrom(tidyterra,geom_spatraster_contour)
 importFrom(tidyterra,geom_spatraster_rgb)
