--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ export(plot_station_siting_context)
 export(plot_tile_station)
 import(ggplot2)
 import(ows4R)
+import(sf)
 importFrom(ggfun,element_roundrect)
 importFrom(httr,GET)
 importFrom(httr,authenticate)
@@ -34,7 +35,6 @@ importFrom(rgrass,initGRASS)
 importFrom(rgrass,remove_GISRC)
 importFrom(rgrass,unlink_.gislock)
 importFrom(rgrass,write_RAST)
-importFrom(sf,st_as_sf)
 importFrom(sf,st_as_sfc)
 importFrom(sf,st_coordinates)
 importFrom(sf,st_crs)
