ImportFrom pull_crs

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -51,3 +51,4 @@ importFrom(terra,setMinMax)
 importFrom(terra,vect)
 importFrom(tidyterra,geom_spatraster_contour)
 importFrom(tidyterra,geom_spatraster_rgb)
+importFrom(tidyterra,pull_crs)
