--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ export(plot_tile_station)
 import(ggplot2)
 import(ows4R)
 import(sf)
+import(terra)
 importFrom(ggfun,element_roundrect)
 importFrom(httr,GET)
 importFrom(httr,authenticate)
