--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,10 +11,12 @@ Depends:
 Imports: sf,
          terra,
          tidyterra,
+         rgrass,
+         rayshader,
          ows4R,
          httr,
-         ggplot2,
-         rayshader
+         stringr,
+         ggplot2
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.2.3
