--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,7 @@ import(ggplot2)
 import(ows4R)
 import(sf)
 import(terra)
+import(tidyterra)
 importFrom(ggfun,element_roundrect)
 importFrom(httr,GET)
 importFrom(httr,authenticate)
