test not importing pipe and exporting load_ar5 and ogc

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,15 +4,14 @@ export(compute_horizon)
 export(compute_skyviewfactor)
 export(compute_sun_position)
 export(download_dem_kartverket)
-export(download_dem_kartverket_ogc)
 export(get_latlon_frost)
 export(get_tile_wms)
-export(load_data_ar5)
 export(plot_dem_rayshader)
 export(plot_station_horizon_sun)
 export(plot_station_siting_context)
 export(plot_tile_station)
 import(ggplot2)
+import(httr)
 import(ows4R)
 import(sf)
 import(terra)
@@ -40,8 +39,6 @@ importFrom(rgrass,write_RAST)
 importFrom(sf,st_as_sfc)
 importFrom(sf,st_coordinates)
 importFrom(sf,st_crs)
-importFrom(sf,st_intersection)
-importFrom(sf,st_read)
 importFrom(sf,st_transform)
 importFrom(stringr,str_to_title)
 importFrom(suntools,solarpos)
