Edit packages, examples, shortcuts to pass devtools:check()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,18 +10,23 @@ export(plot_dem_rayshader)
 export(plot_station_horizon_sun)
 export(plot_station_siting_context)
 export(plot_tile_station)
+export(stationid_array)
 import(ggplot2)
 import(ows4R)
 import(sf)
 importFrom(ggfun,element_roundrect)
+importFrom(grDevices,dev.off)
+importFrom(grDevices,pdf)
 importFrom(httr,GET)
 importFrom(httr,authenticate)
 importFrom(httr,content)
 importFrom(magrittr,"%>%")
 importFrom(maptiles,get_tiles)
 importFrom(rayshader,add_shadow)
+importFrom(rayshader,ambient_shade)
 importFrom(rayshader,plot_3d)
 importFrom(rayshader,raster_to_matrix)
+importFrom(rayshader,ray_shade)
 importFrom(rayshader,render_camera)
 importFrom(rayshader,render_depth)
 importFrom(rayshader,render_highquality)
@@ -37,6 +42,7 @@ importFrom(sf,st_as_sfc)
 importFrom(sf,st_coordinates)
 importFrom(sf,st_crs)
 importFrom(sf,st_transform)
+importFrom(stats,setNames)
 importFrom(stringr,str_to_title)
 importFrom(suntools,solarpos)
 importFrom(terra,cellFromXY)
@@ -48,3 +54,5 @@ importFrom(terra,vect)
 importFrom(tidyterra,geom_spatraster_contour)
 importFrom(tidyterra,geom_spatraster_rgb)
 importFrom(tidyterra,pull_crs)
+importFrom(utils,type.convert)
+importFrom(utils,write.csv)
