--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,7 +5,7 @@ Version: 0.1.0
 Author: Pierre-Marie Lefeuvre
 Maintainer: Pierre-Marie Lefeuvre <pierre.marie.lefeuvre@met.no>
 Description: The package sitingclass evaluates the exposure of weather stations for specific sensors from digital elevation models. The package is currently designed for Met usage only, due to data restrictions.
-License: GPL3
+License: GPL (>= 3)
 Depends: R (>= 3.6.0)
 Imports: ggfun,
          ggplot2,
@@ -20,6 +20,7 @@ Imports: ggfun,
          suntools,
          terra,
          tidyterra
+Suggests: magick
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.2.3
