Fix ows4R/sf importFrom and variable .

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,8 +12,6 @@ export(plot_station_siting_context)
 export(plot_tile_station)
 export(stationid_array)
 import(ggplot2)
-import(ows4R)
-import(sf)
 importFrom(ggfun,element_roundrect)
 importFrom(grDevices,dev.off)
 importFrom(grDevices,pdf)
@@ -22,6 +20,7 @@ importFrom(httr,authenticate)
 importFrom(httr,content)
 importFrom(magrittr,"%>%")
 importFrom(maptiles,get_tiles)
+importFrom(ows4R,WCSClient)
 importFrom(rayshader,add_shadow)
 importFrom(rayshader,ambient_shade)
 importFrom(rayshader,plot_3d)
@@ -38,6 +37,7 @@ importFrom(rgrass,initGRASS)
 importFrom(rgrass,remove_GISRC)
 importFrom(rgrass,unlink_.gislock)
 importFrom(rgrass,write_RAST)
+importFrom(sf,st_as_sf)
 importFrom(sf,st_as_sfc)
 importFrom(sf,st_coordinates)
 importFrom(sf,st_crs)
