--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,13 +13,13 @@ Imports: ggfun,
          magrittr,
          maptiles,
          ows4R,
-         rayshader,
-         rgrass,
-         sf,
+         rayshader (>= 0.10.0),
+         rgrass (>= 0.3-8),
+         sf (>= 1.0-12),
          stringr,
          suntools,
-         terra,
-         tidyterra
+         terra (>= 1.7-55),
+         tidyterra (>= 0.5.0)
 Suggests: magick
 Encoding: UTF-8
 LazyData: true
