--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,8 +7,7 @@ Maintainer: Pierre-Marie Lefeuvre <pierre.marie.lefeuvre@met.no>
 Description: The package sitingclass evaluates the exposure of weather stations for specific sensors from digital elevation models. The package is currently designed for Met usage only, due to data restrictions.
 License: GPL (>= 3)
 Depends: R (>= 3.6.0)
-Imports: ggfun,
-         ggplot2,
+Imports: ggplot2,
          httr,
          magrittr,
          maptiles,
