rm stringr and add str_to_title function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,8 +11,8 @@ export(plot_station_horizon_sun)
 export(plot_station_siting_context)
 export(plot_tile_station)
 export(stationid_array)
+export(str_to_title)
 import(ggplot2)
-importFrom(ggfun,element_roundrect)
 importFrom(grDevices,dev.off)
 importFrom(grDevices,pdf)
 importFrom(httr,GET)
@@ -43,7 +43,6 @@ importFrom(sf,st_coordinates)
 importFrom(sf,st_crs)
 importFrom(sf,st_transform)
 importFrom(stats,setNames)
-importFrom(stringr,str_to_title)
 importFrom(suntools,solarpos)
 importFrom(terra,cellFromXY)
 importFrom(terra,crs)
