--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,6 +5,7 @@ Version: 0.1.0
 Author: Pierre-Marie Lefeuvre
 Maintainer: Pierre-Marie Lefeuvre <pierre.marie.lefeuvre@met.no>
 Description: The package sitingclass evaluates the exposure of weather stations for specific sensors from digital elevation models. The package is currently designed for Met usage only, due to data restrictions.
+URL: https://gitlab.met.no/pierreml/sitingclass
 License: GPL (>= 3)
 Depends: R (>= 3.6.0)
 Imports: ggplot2,
@@ -18,7 +19,8 @@ Imports: ggplot2,
          suntools,
          terra (>= 1.7-55),
          tidyterra (>= 0.5.0)
-Suggests: magick
+Suggests: magick,
+         knitr
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.2.3
