--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export(add_buffer)
 export(add_grid)
 export(compute_horizon)
+export(compute_landcover)
 export(compute_skyviewfactor)
 export(compute_sun_position)
 export(download_dem_kartverket)
@@ -14,9 +15,14 @@ export(plot_station_grid)
 export(plot_station_horizon_sun)
 export(plot_station_siting_context)
 export(plot_tile_station)
+export(raster_to_vector)
 export(stationid_array)
 export(str_to_title)
 import(ggplot2)
+importFrom(ggplot2,coord_sf)
+importFrom(ggplot2,ggplot)
+importFrom(ggplot2,scale_fill_manual)
+importFrom(ggplot2,theme_minimal)
 importFrom(grDevices,dev.off)
 importFrom(grDevices,pdf)
 importFrom(httr,GET)
@@ -48,15 +54,20 @@ importFrom(sf,st_crs)
 importFrom(sf,st_transform)
 importFrom(stats,setNames)
 importFrom(suntools,solarpos)
+importFrom(terra,aggregate)
+importFrom(terra,as.polygons)
 importFrom(terra,buffer)
 importFrom(terra,cellFromXY)
 importFrom(terra,crs)
 importFrom(terra,ext)
+importFrom(terra,mask)
 importFrom(terra,rast)
 importFrom(terra,setMinMax)
+importFrom(terra,setValues)
 importFrom(terra,vect)
 importFrom(tidyterra,geom_spatraster_contour)
 importFrom(tidyterra,geom_spatraster_rgb)
+importFrom(tidyterra,geom_spatvector)
 importFrom(tidyterra,pull_crs)
 importFrom(utils,type.convert)
 importFrom(utils,write.csv)
