Name change of landcover to landtype and added distance distribution per landtype

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,7 +3,8 @@
 export(add_buffer)
 export(add_grid)
 export(compute_horizon)
-export(compute_landcover)
+export(compute_landtype)
+export(compute_landtype_distance)
 export(compute_skyviewfactor)
 export(compute_sun_position)
 export(download_dem_kartverket)
