Finalise compute_landtype() work

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -60,9 +60,11 @@ importFrom(terra,as.polygons)
 importFrom(terra,buffer)
 importFrom(terra,cellFromXY)
 importFrom(terra,crs)
+importFrom(terra,erase)
 importFrom(terra,ext)
 importFrom(terra,mask)
 importFrom(terra,rast)
+importFrom(terra,res)
 importFrom(terra,setMinMax)
 importFrom(terra,setValues)
 importFrom(terra,vect)
