--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 export(add_buffer)
 export(add_grid)
+export(compute_class)
 export(compute_horizon)
 export(compute_landtype)
 export(compute_landtype_distance)
@@ -21,6 +22,7 @@ export(stationid_array)
 export(str_to_title)
 import(ggplot2)
 importFrom(ggplot2,coord_sf)
+importFrom(ggplot2,geom_area)
 importFrom(ggplot2,ggplot)
 importFrom(ggplot2,scale_fill_manual)
 importFrom(ggplot2,theme_minimal)
