--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(compute_landtype_distance)
 export(compute_skyviewfactor)
 export(compute_sun_position)
 export(download_dem_kartverket)
+export(fill_landtype)
 export(get_latlon_frost)
 export(get_tile_wms)
 export(make_bbox)
