Add compute_horizon_max() for compute_class() and Doc for dx/resx

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(add_buffer)
 export(add_grid)
 export(compute_class)
 export(compute_horizon)
+export(compute_horizon_max)
 export(compute_landtype)
 export(compute_landtype_distance)
 export(compute_skyviewfactor)
@@ -56,6 +57,7 @@ importFrom(sf,st_as_sfc)
 importFrom(sf,st_coordinates)
 importFrom(sf,st_crs)
 importFrom(sf,st_transform)
+importFrom(stats,quantile)
 importFrom(stats,setNames)
 importFrom(suntools,solarpos)
 importFrom(terra,aggregate)
@@ -75,5 +77,6 @@ importFrom(tidyterra,geom_spatraster_contour)
 importFrom(tidyterra,geom_spatraster_rgb)
 importFrom(tidyterra,geom_spatvector)
 importFrom(tidyterra,pull_crs)
+importFrom(utils,stack)
 importFrom(utils,type.convert)
 importFrom(utils,write.csv)
