--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -19,9 +19,12 @@ Imports: ggplot2,
          suntools,
          terra (>= 1.7-55),
          tidyterra (>= 0.5.0)
-Suggests: magick,
-         knitr
+Suggests: 
+    magick,
+    knitr,
+    testthat (>= 3.0.0)
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.2.3
 VignetteBuilder: knitr
+Config/testthat/edition: 3
