Convert make_bbox & co to SpatExtent/Vector from sf

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,6 +25,8 @@ export(str_to_title)
 import(ggplot2)
 importFrom(ggplot2,coord_sf)
 importFrom(ggplot2,geom_area)
+importFrom(ggplot2,geom_label)
+importFrom(ggplot2,geom_segment)
 importFrom(ggplot2,ggplot)
 importFrom(ggplot2,scale_fill_manual)
 importFrom(ggplot2,theme_minimal)
