--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,13 +9,12 @@ URL: https://gitlab.met.no/pierreml/sitingclass
 License: GPL (>= 3)
 Depends: R (>= 3.6.0)
 Imports: ggplot2,
-         httr,
+         httr2,
          magrittr,
          maptiles,
          ows4R,
          rayshader (>= 0.10.0),
          rgrass (>= 0.3-8),
-         sf (>= 1.0-12),
          suntools,
          terra (>= 1.7-55),
          tidyterra (>= 0.5.0)
