Replace sf functions by terra, update make_bbox and names from stn attributes

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,7 +11,7 @@ export(compute_skyviewfactor)
 export(compute_sun_position)
 export(download_dem_kartverket)
 export(fill_landtype)
-export(get_latlon_frost)
+export(get_metadata_frost)
 export(get_tile_wms)
 export(make_bbox)
 export(plot_dem_rayshader)
@@ -33,9 +33,12 @@ importFrom(ggplot2,theme_minimal)
 importFrom(grDevices,dev.off)
 importFrom(grDevices,pdf)
 importFrom(httr,GET)
-importFrom(httr,authenticate)
 importFrom(httr,content)
-importFrom(magrittr,"%>%")
+importFrom(httr2,req_auth_basic)
+importFrom(httr2,req_perform)
+importFrom(httr2,req_retry)
+importFrom(httr2,request)
+importFrom(httr2,resp_body_json)
 importFrom(maptiles,get_tiles)
 importFrom(ows4R,WCSClient)
 importFrom(rayshader,add_shadow)
@@ -54,10 +57,6 @@ importFrom(rgrass,initGRASS)
 importFrom(rgrass,remove_GISRC)
 importFrom(rgrass,unlink_.gislock)
 importFrom(rgrass,write_RAST)
-importFrom(sf,st_as_sf)
-importFrom(sf,st_coordinates)
-importFrom(sf,st_crs)
-importFrom(sf,st_transform)
 importFrom(stats,quantile)
 importFrom(stats,setNames)
 importFrom(suntools,solarpos)
@@ -65,10 +64,13 @@ importFrom(terra,aggregate)
 importFrom(terra,as.polygons)
 importFrom(terra,buffer)
 importFrom(terra,cellFromXY)
+importFrom(terra,crds)
 importFrom(terra,crs)
 importFrom(terra,erase)
 importFrom(terra,ext)
+importFrom(terra,is.valid)
 importFrom(terra,mask)
+importFrom(terra,project)
 importFrom(terra,rast)
 importFrom(terra,res)
 importFrom(terra,setMinMax)
