Remove purrr map_dfr() in get_metadata and other fixes

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -39,6 +39,7 @@ importFrom(httr2,req_perform)
 importFrom(httr2,req_retry)
 importFrom(httr2,request)
 importFrom(httr2,resp_body_json)
+importFrom(magrittr,"%>%")
 importFrom(maptiles,get_tiles)
 importFrom(ows4R,WCSClient)
 importFrom(rayshader,add_shadow)
