Save plot/file and remove print infos

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -32,16 +32,16 @@ importFrom(ggplot2,scale_fill_manual)
 importFrom(ggplot2,theme_minimal)
 importFrom(grDevices,dev.off)
 importFrom(grDevices,pdf)
-importFrom(httr,GET)
-importFrom(httr,content)
 importFrom(httr2,req_auth_basic)
 importFrom(httr2,req_perform)
 importFrom(httr2,req_retry)
 importFrom(httr2,request)
 importFrom(httr2,resp_body_json)
+importFrom(httr2,resp_body_raw)
 importFrom(magrittr,"%>%")
 importFrom(maptiles,get_tiles)
 importFrom(ows4R,WCSClient)
+importFrom(png,readPNG)
 importFrom(rayshader,add_shadow)
 importFrom(rayshader,ambient_shade)
 importFrom(rayshader,plot_3d)
