--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,6 +13,7 @@ Imports: ggplot2,
          magrittr,
          maptiles,
          ows4R,
+         png,
          rayshader (>= 0.10.0),
          rgrass (>= 0.3-8),
          suntools,
@@ -24,6 +25,6 @@ Suggests:
     testthat (>= 3.0.0)
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 7.2.3
+RoxygenNote: 7.3.0
 VignetteBuilder: knitr
 Config/testthat/edition: 3
