add pagination function for large metadata download

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(compute_sun_position)
 export(download_dem_kartverket)
 export(fill_landtype)
 export(get_metadata_frost)
+export(get_metadata_pagination)
 export(get_tile_wms)
 export(make_bbox)
 export(plot_dem_rayshader)
@@ -33,11 +34,15 @@ importFrom(ggplot2,theme_minimal)
 importFrom(grDevices,dev.off)
 importFrom(grDevices,pdf)
 importFrom(httr2,req_auth_basic)
+importFrom(httr2,req_headers)
 importFrom(httr2,req_perform)
+importFrom(httr2,req_perform_iterative)
 importFrom(httr2,req_retry)
+importFrom(httr2,req_url_query)
 importFrom(httr2,request)
 importFrom(httr2,resp_body_json)
 importFrom(httr2,resp_body_raw)
+importFrom(httr2,resp_header)
 importFrom(magrittr,"%>%")
 importFrom(maptiles,get_tiles)
 importFrom(ows4R,WCSClient)
@@ -77,6 +82,8 @@ importFrom(terra,res)
 importFrom(terra,setMinMax)
 importFrom(terra,setValues)
 importFrom(terra,vect)
+importFrom(terra,writeVector)
+importFrom(tidyr,unnest)
 importFrom(tidyterra,geom_spatraster_contour)
 importFrom(tidyterra,geom_spatraster_rgb)
 importFrom(tidyterra,geom_spatvector)
