--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,7 +18,8 @@ Imports: ggplot2,
          rgrass (>= 0.3-8),
          suntools,
          terra (>= 1.7-55),
-         tidyterra (>= 0.5.0)
+         tidyterra (>= 0.5.0),
+         tidyr
 Suggests: 
     magick,
     knitr,
