Document new plot functions and fix small errors

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,13 +10,16 @@ export(compute_landtype_distance)
 export(compute_skyviewfactor)
 export(compute_sun_position)
 export(download_dem_kartverket)
+export(fill_corine)
 export(fill_landtype)
 export(get_metadata_frost)
 export(get_metadata_pagination)
 export(get_tile_wms)
 export(make_bbox)
 export(plot_dem_rayshader)
+export(plot_landtype_dist)
 export(plot_station_grid)
+export(plot_station_horizon_max)
 export(plot_station_horizon_sun)
 export(plot_station_siting_context)
 export(plot_tile_station)
