Put utils in function, add docs, fix lint, ...

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,12 +10,16 @@ export(compute_landtype_distance)
 export(compute_skyviewfactor)
 export(compute_sun_position)
 export(download_dem_kartverket)
+export(extract_resp)
 export(fill_corine)
 export(fill_landtype)
+export(format_resp)
 export(get_metadata_frost)
 export(get_metadata_pagination)
 export(get_tile_wms)
+export(json_to_df)
 export(make_bbox)
+export(next_req)
 export(plot_dem_rayshader)
 export(plot_landtype_dist)
 export(plot_station_grid)
@@ -27,13 +31,28 @@ export(raster_to_vector)
 export(stationid_array)
 export(str_to_title)
 import(ggplot2)
+importFrom(ggplot2,annotate)
+importFrom(ggplot2,coord_cartesian)
 importFrom(ggplot2,coord_sf)
 importFrom(ggplot2,geom_area)
+importFrom(ggplot2,geom_hline)
 importFrom(ggplot2,geom_label)
+importFrom(ggplot2,geom_line)
+importFrom(ggplot2,geom_path)
+importFrom(ggplot2,geom_polygon)
 importFrom(ggplot2,geom_segment)
+importFrom(ggplot2,geom_text)
 importFrom(ggplot2,ggplot)
+importFrom(ggplot2,ggsave)
+importFrom(ggplot2,labs)
+importFrom(ggplot2,scale_color_viridis_d)
 importFrom(ggplot2,scale_fill_manual)
+importFrom(ggplot2,scale_x_continuous)
+importFrom(ggplot2,scale_y_continuous)
+importFrom(ggplot2,theme)
 importFrom(ggplot2,theme_minimal)
+importFrom(ggplot2,xlab)
+importFrom(ggplot2,ylab)
 importFrom(grDevices,dev.off)
 importFrom(grDevices,pdf)
 importFrom(httr2,req_auth_basic)
@@ -48,7 +67,6 @@ importFrom(httr2,resp_body_raw)
 importFrom(httr2,resp_header)
 importFrom(magrittr,"%>%")
 importFrom(maptiles,get_tiles)
-importFrom(ows4R,WCSClient)
 importFrom(png,readPNG)
 importFrom(rayshader,add_shadow)
 importFrom(rayshader,ambient_shade)
@@ -85,6 +103,7 @@ importFrom(terra,res)
 importFrom(terra,setMinMax)
 importFrom(terra,setValues)
 importFrom(terra,vect)
+importFrom(terra,writeRaster)
 importFrom(terra,writeVector)
 importFrom(tidyr,unnest)
 importFrom(tidyterra,geom_spatraster_contour)
