--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,21 +9,23 @@ URL: https://gitlab.met.no/pierreml/sitingclass
 License: GPL (>= 3)
 Depends: R (>= 3.6.0)
 Imports: ggplot2,
+         grDevices,
          httr2,
          magrittr,
          maptiles,
-         ows4R,
          png,
-         rayshader (>= 0.10.0),
-         rgrass (>= 0.3-8),
+         rayshader,
+         rgrass,
+         stats,
          suntools,
-         terra (>= 1.7-55),
-         tidyterra (>= 0.5.0),
-         tidyr
+         terra,
+         tidyr,
+         tidyterra,
+         utils
 Suggests: 
     magick,
     knitr,
-    testthat (>= 3.0.0)
+    testthat
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.3.0
