--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -25,7 +25,8 @@ Imports: ggplot2,
 Suggests: 
     magick,
     knitr,
-    testthat
+    testthat,
+    rmarkdown
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.3.2
