Add man file for new function and update rest of docs, vignettes and NAMESPACE

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(colour_equipmenttype)
 export(compute_class)
 export(compute_horizon)
 export(compute_horizon_max)
+export(compute_horizon_rollmean)
 export(compute_landtype)
 export(compute_landtype_distance)
 export(compute_skyviewfactor)
@@ -114,3 +115,4 @@ importFrom(tidyterra,pull_crs)
 importFrom(utils,stack)
 importFrom(utils,type.convert)
 importFrom(utils,write.csv)
+importFrom(zoo,rollmean)
