Add stats dependence to median

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -86,6 +86,7 @@ importFrom(rgrass,initGRASS)
 importFrom(rgrass,remove_GISRC)
 importFrom(rgrass,unlink_.gislock)
 importFrom(rgrass,write_RAST)
+importFrom(stats,median)
 importFrom(stats,quantile)
 importFrom(stats,setNames)
 importFrom(suntools,solarpos)
