Switch to Met class requirements and update function title

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(compute_horizon_max)
 export(compute_horizon_rollmean)
 export(compute_landtype)
 export(compute_landtype_distance)
+export(compute_landtype_horizon_class)
 export(compute_skyviewfactor)
 export(compute_sun_position)
 export(download_dem_kartverket)
