--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,6 +27,7 @@ export(plot_dem_rayshader)
 export(plot_landtype_dist)
 export(plot_station_grid)
 export(plot_station_horizon_max)
+export(plot_station_horizon_range)
 export(plot_station_horizon_sun)
 export(plot_station_siting_context)
 export(plot_tile_station)
@@ -34,6 +35,7 @@ export(raster_to_vector)
 export(stationid_array)
 export(str_to_title)
 import(ggplot2)
+importFrom(RColorBrewer,brewer.pal)
 importFrom(ggplot2,annotate)
 importFrom(ggplot2,coord_cartesian)
 importFrom(ggplot2,coord_sf)
@@ -87,6 +89,8 @@ importFrom(rgrass,initGRASS)
 importFrom(rgrass,remove_GISRC)
 importFrom(rgrass,unlink_.gislock)
 importFrom(rgrass,write_RAST)
+importFrom(scales,pseudo_log_trans)
+importFrom(scales,rescale)
 importFrom(stats,median)
 importFrom(stats,quantile)
 importFrom(stats,setNames)
