--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,7 +16,9 @@ Imports:
     maptiles,
     png,
     rayshader (>= 0.38.11),
+    RColorBrewer,
     rgrass,
+    scales,
     stats,
     suntools,
     terra,
@@ -34,5 +36,5 @@ LazyData: true
 RoxygenNote: 7.3.2
 VignetteBuilder: knitr
 Config/testthat/edition: 3
-Remotes:  
+Remotes: 
     tylermorganwall/rayshader
