--- a/NAMESPACE
+++ b/NAMESPACE
@@ -91,6 +91,7 @@ importFrom(rgrass,unlink_.gislock)
 importFrom(rgrass,write_RAST)
 importFrom(scales,pseudo_log_trans)
 importFrom(scales,rescale)
+importFrom(stats,approx)
 importFrom(stats,median)
 importFrom(stats,quantile)
 importFrom(stats,setNames)
