--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,7 +3,7 @@
 export(add_buffer)
 export(add_grid)
 export(colour_equipmenttype)
-export(compute_class)
+export(compute_class_air_temperature)
 export(compute_horizon)
 export(compute_horizon_max)
 export(compute_horizon_rollmean)
