Move colour and values for scale_fill_gradientn to user function colour_range

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export(add_buffer)
 export(add_grid)
 export(colour_equipmenttype)
+export(colour_range)
 export(compute_class_air_temperature)
 export(compute_horizon)
 export(compute_horizon_max)
@@ -35,7 +36,6 @@ export(raster_to_vector)
 export(stationid_array)
 export(str_to_title)
 import(ggplot2)
-importFrom(RColorBrewer,brewer.pal)
 importFrom(ggplot2,annotate)
 importFrom(ggplot2,coord_cartesian)
 importFrom(ggplot2,coord_sf)
