Update URL in doc and add doc for compute_class_precipitation()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(add_grid)
 export(colour_equipmenttype)
 export(colour_range)
 export(compute_class_air_temperature)
+export(compute_class_precipitation)
 export(compute_horizon)
 export(compute_horizon_max)
 export(compute_horizon_rollmean)
