Fix library patchwork in vignettes

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,7 +14,6 @@ Imports:
     httr2,
     magrittr,
     maptiles,
-    patchwork,
     png,
     rayshader (>= 0.38.11),
     rgrass,
@@ -30,7 +29,8 @@ Suggests:
     magick,
     knitr,
     testthat,
-    rmarkdown
+    rmarkdown,
+    patchwork
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.3.2
