Add patchwork library

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -37,6 +37,7 @@ export(raster_to_vector)
 export(stationid_array)
 export(str_to_title)
 import(ggplot2)
+import(patchwork)
 importFrom(ggplot2,annotate)
 importFrom(ggplot2,coord_cartesian)
 importFrom(ggplot2,coord_sf)
