Add c("--no-examples", "--no-tests", "--no-vignettes") to build in  .gitlab-ci.yml

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -32,7 +32,7 @@ building:
     - Rscript -e 'if(!requireNamespace("pak", quietly = TRUE)) {install.packages("pak")}'
     - Rscript -e 'pak::pak(pkg = ".", upgrade = TRUE)'
     - Rscript -e 'pak::pkg_install(pkg = c("rcmdcheck"), upgrade = TRUE)'
-    - R -e 'rcmdcheck::rcmdcheck(args = c("--no-manual", "--as-cran"), error_on = "warning", check_dir = "check")'
+    - R -e 'rcmdcheck::rcmdcheck(args = c("--no-examples", "--no-tests", "--no-manual", "--no-build-vignettes", "--as-cran"), error_on = "warning", check_dir = "check")'
   cache:
     - key: cache-$CI_COMMIT_REF_SLUG
       fallback_keys:
