--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -25,6 +25,8 @@ building:
     - R -e "sessionInfo()"
     - if [[ $CI_DEFAULT_BRANCH == "master" || $CI_DEFAULT_BRANCH = "main" ]]; then echo "OK - Default branch is master or main"; else echo "Default branch is not master or main; please add yours ($CI_DEFAULT_BRANCH) where needed, as well as in the present line of code" ; exit 1; fi
     - echo "Library path for packages :" $R_LIBS_USER
+    - curl https://ip.met.no
+    - curl icanhazip.com
     - mkdir -p $R_LIBS_USER
     - Rscript -e 'Sys.getenv("R_LIBS_USER");dir.exists(Sys.getenv("R_LIBS_USER"))'
     - Rscript -e 'Sys.getenv("R_LIBS")'
