--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -26,10 +26,10 @@ building:
     - if [[ $CI_DEFAULT_BRANCH == "master" || $CI_DEFAULT_BRANCH = "main" ]]; then echo "OK - Default branch is master or main"; else echo "Default branch is not master or main; please add yours ($CI_DEFAULT_BRANCH) where needed, as well as in the present line of code" ; exit 1; fi
     - echo "Library path for packages :" $R_LIBS_USER
     - curl https://ip.met.no
-    - sudo add-apt-repository ppa:ubuntugis/ppa
-    - sudo add-apt-repository ppa:grass/grass-stable
-    - sudo apt-get update
-    - sudo apt-get install grass
+    - sh -c add-apt-repository ppa:ubuntugis/ppa
+    - sh -c add-apt-repository ppa:grass/grass-stable
+    - sh -c apt-get update
+    - sh -c apt-get install grass
     - mkdir -p $R_LIBS_USER
     - Rscript -e 'Sys.getenv("R_LIBS_USER");dir.exists(Sys.getenv("R_LIBS_USER"))'
     - Rscript -e 'Sys.getenv("R_LIBS")'
