--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -30,8 +30,8 @@ building:
     - sudo apt upgrade -y
     - sudo apt install -y software-properties-common
     - type add-apt-repository
-    - sudo add-apt-repository ppa:ubuntugis/ppa
-    - sudo add-apt-repository ppa:grass/grass-stable
+    - sudo add-apt-repository ppa:ubuntugis/ubuntugis-unstable
+    - sudo add-apt-repository ppa:grass/grass-unstable
     - sudo apt-get update
     - sudo apt-get install -y grass
     - mkdir -p $R_LIBS_USER
