--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -32,7 +32,8 @@ building:
     - type add-apt-repository
     - sudo add-apt-repository ppa:ubuntugis/ubuntugis-unstable
     - sudo apt-get update
-    - sudo apt-get install -y grass
+    - sudo apt-get install -y grass gdal
+    - export LD_LIBRARY_PATH=/usr/local/lib:$LD_LIBRARY_PATH
     - mkdir -p $R_LIBS_USER
     - Rscript -e 'Sys.getenv("R_LIBS_USER");dir.exists(Sys.getenv("R_LIBS_USER"))'
     - Rscript -e 'Sys.getenv("R_LIBS")'
