--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -26,13 +26,12 @@ building:
     - if [[ $CI_DEFAULT_BRANCH == "master" || $CI_DEFAULT_BRANCH = "main" ]]; then echo "OK - Default branch is master or main"; else echo "Default branch is not master or main; please add yours ($CI_DEFAULT_BRANCH) where needed, as well as in the present line of code" ; exit 1; fi
     - echo "Library path for packages :" $R_LIBS_USER
     - curl https://ip.met.no
-    - sudo apt update
-    - sudo apt upgrade -y
-    - sudo apt install -y software-properties-common
-    - type add-apt-repository
-    - sudo add-apt-repository ppa:ubuntugis/ubuntugis-unstable
-    - sudo apt-get update
-    - sudo apt-get install -y grass libgdal-dev
+    - apt update
+    - apt upgrade -y
+    - apt install -y software-properties-common
+    - add-apt-repository ppa:ubuntugis/ubuntugis-unstable
+    - apt-get update
+    - apt-get install -y grass libgdal-dev
     - export LD_LIBRARY_PATH=/usr/local/lib:$LD_LIBRARY_PATH
     - mkdir -p $R_LIBS_USER
     - Rscript -e 'Sys.getenv("R_LIBS_USER");dir.exists(Sys.getenv("R_LIBS_USER"))'
