--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -26,12 +26,12 @@ building:
     - if [[ $CI_DEFAULT_BRANCH == "master" || $CI_DEFAULT_BRANCH = "main" ]]; then echo "OK - Default branch is master or main"; else echo "Default branch is not master or main; please add yours ($CI_DEFAULT_BRANCH) where needed, as well as in the present line of code" ; exit 1; fi
     - echo "Library path for packages :" $R_LIBS_USER
     - curl https://ip.met.no
-    - apt update
-    - apt upgrade -y
-    - apt install -y software-properties-common
-    - add-apt-repository ppa:ubuntugis/ubuntugis-unstable
-    - apt-get update
-    - apt-get install -y grass libgdal-dev gdal-bin
+    - sudo apt-get update
+    - sudo apt-get upgrade -y
+    - sudo apt-get install -y software-properties-common
+    - sudo add-apt-repository ppa:ubuntugis/ubuntugis-unstable
+    - sudo apt-get update
+    - sudo apt-get install -y grass libgdal-dev gdal-bin
     - export LD_LIBRARY_PATH=/usr/local/lib:$LD_LIBRARY_PATH
     - echo $LD_LIBRARY_PATH
     - mkdir -p $R_LIBS_USER
