--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -24,24 +24,21 @@ building:
     - lsb_release -c
     - R -e "sessionInfo()"
     - if [[ $CI_DEFAULT_BRANCH == "master" || $CI_DEFAULT_BRANCH = "main" ]]; then echo "OK - Default branch is master or main"; else echo "Default branch is not master or main; please add yours ($CI_DEFAULT_BRANCH) where needed, as well as in the present line of code" ; exit 1; fi
-    - echo "Library path for packages :" $R_LIBS_USER
-    - curl https://ip.met.no
     - sudo apt-get update
-    - sudo apt-get upgrade -y
     - sudo apt-get install -y software-properties-common
     - sudo add-apt-repository ppa:ubuntugis/ubuntugis-unstable
     - sudo apt-get update
-    - sudo apt-get install -y grass libgdal-dev gdal-bin
-    - export LD_LIBRARY_PATH=/usr/local/lib:$LD_LIBRARY_PATH
-    - echo $LD_LIBRARY_PATH
+    - sudo apt-get install -y grass-dev
+    - echo "Library path for packages :" $R_LIBS_USER
     - mkdir -p $R_LIBS_USER
     - Rscript -e 'Sys.getenv("R_LIBS_USER");dir.exists(Sys.getenv("R_LIBS_USER"))'
     - Rscript -e 'Sys.getenv("R_LIBS")'
     - Rscript -e '.libPaths()'
     - Rscript -e 'if(!requireNamespace("pak", quietly = TRUE)) {install.packages("pak")}'
+    - Rscript -e 'pak::pkg_install(pkg = c("r-spatial/sf"), upgrade = TRUE)'
     - Rscript -e 'pak::pak(pkg = ".", upgrade = TRUE)'
     - Rscript -e 'pak::pkg_install(pkg = c("rcmdcheck"), upgrade = TRUE)'
-    - R -e 'rcmdcheck::rcmdcheck(args = c("--no-examples", "--no-tests", "--no-manual", "--no-build-vignettes", "--as-cran"), error_on = "warning", check_dir = "check")'
+    - R -e 'rcmdcheck::rcmdcheck(args = c("--no-manual", "--as-cran"), error_on = "warning", check_dir = "check")'
   cache:
     - key: cache-$CI_COMMIT_REF_SLUG
       fallback_keys:
