--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -36,6 +36,7 @@ building:
     - Rscript -e '.libPaths()'
     - Rscript -e 'if(!requireNamespace("pak", quietly = TRUE)) {install.packages("pak")}'
     - Rscript -e 'pak::pkg_install(pkg = c("r-spatial/sf"), upgrade = TRUE)'
+    - Rscript -e 'pak::pkg_install(pkg = c("rspatial/terra"), upgrade = TRUE)'
     - Rscript -e 'pak::pak(pkg = ".", upgrade = TRUE)'
     - Rscript -e 'pak::pkg_install(pkg = c("rcmdcheck"), upgrade = TRUE)'
     - R -e 'rcmdcheck::rcmdcheck(args = c("--no-manual", "--as-cran"), error_on = "warning", check_dir = "check")'
