--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -37,7 +37,7 @@ building:
     - Rscript -e 'if(!requireNamespace("pak", quietly = TRUE)) {install.packages("pak")}'
     - Rscript -e 'pak::pak(pkg = ".", upgrade = TRUE, dependencies = TRUE)'
     - Rscript -e 'pak::pkg_install(pkg = c("rcmdcheck"), upgrade = TRUE)'
-    - R -e 'rcmdcheck::rcmdcheck(args = c("--no-manual"), error_on = "warning", check_dir = "check")'
+    - R -e 'rcmdcheck::rcmdcheck(args = c("--no-manual"), check_dir = "check")'
   cache:
     - key: cache-$CI_COMMIT_REF_SLUG
       fallback_keys:
@@ -69,7 +69,7 @@ coverage:
   script:
     # Install pak by security, although should be in cache
     - Rscript -e 'if(!requireNamespace("pak", quietly = TRUE)) {install.packages("pak")}'
-    - Rscript -e 'pak::pak(pkg = ".", upgrade = TRUE)'
+    - Rscript -e 'pak::pak(pkg = ".", upgrade = TRUE, dependencies = TRUE)'
     - Rscript -e 'pak::pkg_install(pkg = c("covr", "DT"), upgrade = TRUE)'
     - Rscript -e 'covr::gitlab(quiet = FALSE)'
   cache:
@@ -102,7 +102,7 @@ integration:
   script:
     # Install pak by security, although should be in cache
     - Rscript -e 'if(!requireNamespace("pak", quietly = TRUE)) {install.packages("pak")}'
-    - Rscript -e 'pak::pak(pkg = ".", upgrade = TRUE)'
+    # - Rscript -e 'pak::pak(pkg = ".", upgrade = TRUE, dependencies = TRUE)'
     - Rscript -e 'pak::pkg_install(c("pkgdown"), upgrade = TRUE)'
     - Rscript -e 'pkgdown::build_site()'
   cache:
