Fix layer="ortofoto" since added default dem data and compute_horizon output filename

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -113,6 +113,7 @@ importFrom(terra,rast)
 importFrom(terra,res)
 importFrom(terra,setMinMax)
 importFrom(terra,setValues)
+importFrom(terra,sources)
 importFrom(terra,vect)
 importFrom(terra,writeRaster)
 importFrom(terra,writeVector)
