--- a/NAMESPACE
+++ b/NAMESPACE
@@ -113,7 +113,7 @@ importFrom(terra,rast)
 importFrom(terra,res)
 importFrom(terra,setMinMax)
 importFrom(terra,setValues)
-importFrom(terra,sources)
+importFrom(terra,varnames)
 importFrom(terra,vect)
 importFrom(terra,writeRaster)
 importFrom(terra,writeVector)
