--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -1,7 +1,10 @@
-pandoc: '3.2'
+pandoc: 3.1.3
 pkgdown: 2.1.1
 pkgdown_sha: ~
 articles:
   classification_landtype: classification_landtype.html
   getting_started: getting_started.html
-last_built: 2025-02-12T17:10Z
+last_built: 2025-04-11T14:00Z
+urls:
+  reference: https://pmlefeuvre-met.github.io/sitingclass/reference
+  article: https://pmlefeuvre-met.github.io/sitingclass/articles
